# ska-tmc-simulators

./: .gitignore  .gitlab-ci.yml  .pylintrc  .release  CODEOWNERS  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  run_lint.sh  setup.py
.make/: .gitignore  .gitlab-ci.yml  .make-conan-support  .make-helm-support  .make-k8s-support  .make-oci-support  .make-release-support  CODEOWNERS  README.md  ansible.mk  conan.mk  cpp.mk  docker.mk  helm.mk  help.mk  k8s.mk  oci.mk  python.mk  release.mk  terraform.mk  test.mk
.make/tests/: Makefile
.make/tests/unit/: 01_help.bats  02_release.bats  05_oci.bats  08_python.bats  09_conan.bats  12_terraform.bats
charts/ska-tmc-mid-simulators/: Chart.yaml  values.yaml
charts/ska-tmc-mid-simulators/data/: sdpmastersimulator.yaml
charts/ska-tmc-mid-simulators/templates/: _helpers.tpl
charts/ska-tmc-simulators/: Chart.yaml  values.yaml
charts/ska-tmc-simulators-umbrella/: Chart.yaml  values.yaml
charts/ska-tmc-simulators/charts/: ska-tango-base-0.2.24.tgz  ska-tango-util-0.2.14.tgz
charts/ska-tmc-simulators/data/: cspmastersimulator.yaml  cspsubarraysimulator.yaml  powersupplysimulator.yaml  sdpmastersimulator.yaml  sdpsubarraysimulator.yaml  weatherstation.yaml
charts/ska-tmc-simulators/templates/: _helpers.tpl  deviceservers.yaml
docs/: Makefile
docs/src/: conf.py  index.rst
docs/src/api/: index.rst  ska-tmc-simulators.rst
docs/src/developer_guide/: code_quality.rst
docs/src/getting_started/: getting_started.rst
ska-tmc-simulators/: .release
ska-tmc-simulators/.make/: .make-release-support  Makefile.mk
ska-tmc-simulators/cspmastersimulator/: csp_master.py  csp_master_behaviour.py
ska-tmc-simulators/cspsubarraysimulator/: csp_subarray.py
ska-tmc-simulators/sdpmastersimulator/: sdp_master.py  sdp_master_behaviour.py
ska-tmc-simulators/sdpsubarraysimulator/: sdp_subarray.py  sdp_subarray_behaviour.py
src/ska-tmc-simulators/: release.py
src/ska-tmc-simulators/cspmastersimulator/: CspMaster.fgo  csp_master.py  csp_master_behaviour.py  utils.py
src/ska-tmc-simulators/cspsubarraysimulator/: csp_subarray.py  csp_subarray_behaviour.py  utils.py
src/ska-tmc-simulators/sdpmastersimulator/: sdp_master.py  sdp_master_behaviour.py  utils.py
src/ska-tmc-simulators/sdpsubarraysimulator/: sdp_subarray.py  sdp_subarray_behaviour.py  utils.py
src/ska_tmc_simulators/: release.py
src/ska_tmc_simulators/cspmastersimulator/: CspMaster.fgo  __init__.py  csp_master_behaviour.py  utils.py
src/ska_tmc_simulators/cspsubarraysimulator/: csp_subarray_behaviour.py  utils.py
src/ska_tmc_simulators/powerSupplySimulator/: powerSupply.py
src/ska_tmc_simulators/sdpmastersimulator/: __init__.py  sdp_master.py  sdp_master_behaviour.py  utils.py
src/ska_tmc_simulators/sdpsubarraysimulator/: sdp_subarray_behaviour.py  utils.py
src/ska_tmc_simulators/weatherstation/: weatherstation.py
tests/: test_temp.py
tests/unit/: test_sample.py
tmdata/archiver_configuration/faulty_configuration/: archiver_configuration.yaml
tmdata/archiver_configuration/local/: archiver_configuration.yaml
tmdata/archiver_configuration/low_configuration/: archiver_configuration.yaml
tmdata/archiver_configuration/mid_configuration/: archiver_configuration.yaml
(+18 files in other folders)
